<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainMenu">

    <TextView
        android:text="@string/app_description"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans_bold"/>

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:lottie_fileName="principal.json"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btn_recognize"
        android:background="@drawable/btn_rounder"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_recognize"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/opensans_bold"
        />

    <Button
        android:id="@+id/btn_about"
        android:background="@drawable/btn_rounder"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_about"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/opensans_bold"/>

    <Button
        android:id="@+id/btn_exit"
        android:background="@drawable/btn_rounder"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_exit"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/opensans_bold"/>

</androidx.appcompat.widget.LinearLayoutCompat>