<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="360dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_gravity="center">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:lottie_fileName="info.json"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:text="@string/developed_TXT"
        android:fontFamily="@font/opensans_bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:text="@string/email_TXT"
        android:fontFamily="@font/opensans_bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:text="@string/version_TXT"
        android:fontFamily="@font/opensans_bold"/>

    <ImageView
        android:id="@+id/image_harry"
        android:src="@drawable/harry"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"/>

    <Button
        android:text="@string/btn_okay"
        android:id="@+id/btn_okay"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans_bold"/>



</androidx.appcompat.widget.LinearLayoutCompat>